Added minimal web server actuated by -w option, serving files, not yet SDR data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,11 @@
 #
 # powerscan project build instructions for CMake
 #
-cmake_minimum_required(VERSION 2.8.0)
+cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_C_STANDARD 99)
 
-project(powerscan C CXX)
-
-# include some cmake modules
-list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+project(powerscan CXX C)
 
 # search current directory first for #include <...>
 include_directories(${PROJECT_SOURCE_DIR})
@@ -36,8 +33,7 @@ if (FFTW3F_LIBRARIES)
     list(APPEND TOOLS_LIBS ${FFTW3F_LIBRARIES})
 endif ()
 
-
-# Use the libm math library if it's available
+# Use the libm math library if it's available:
 find_library(
     MATH_LIBRARIES NAMES m
     PATHS /usr/lib /usr/lib64
@@ -46,10 +42,17 @@ if (MATH_LIBRARIES)
     list(APPEND TOOLS_LIBS ${MATH_LIBRARIES})
 endif ()
 
-# Windows getopt compatibility
+# Windows getopt compatibility:
 if (WIN32)
     list(APPEND COMMON_SOURCES getopt.c)
 endif ()
+
+# httplib:
+# Get https://github.com/yhirose/cpp-httplib, then:
+# mkdir -p build; cd build; cmake -DCMAKE_BUILD_TYPE=Release .. && sudo cmake --build . --target install
+# find_package(httplib COMPONENTS OpenSSL ZLIB Brotli)
+find_package(httplib)
+list(APPEND TOOLS_LIBS httplib::httplib)
 
 # GNU compile options
 if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
@@ -58,22 +61,16 @@ if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
 endif(CMAKE_C_COMPILER_ID STREQUAL "GNU")
 
 #
-# Helper library
-#
-#set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
-#list(APPEND COMMON_SOURCES convenience.c)
-#add_library(common STATIC ${COMMON_SOURCES})
-#list(APPEND TOOLS_LIBS common)
-
-#
 # Build and install executables
 #
 SET(EXECUTABLES
         powerscan
 )
 
+list(APPEND COMMON_SOURCES webserver.cpp)
+
 foreach(executable ${EXECUTABLES})
-        add_executable(${executable} ${executable}.c)
+        add_executable(${executable} ${executable}.c ${COMMON_SOURCES})
         target_link_libraries(${executable} ${TOOLS_LIBS})
         install(TARGETS ${executable} RUNTIME DESTINATION ${INSTALL_DEFAULT_BINDIR})
 endforeach(executable)
